--- a/fieldwork/census/CensusAnalysis.html
+++ b/fieldwork/census/CensusAnalysis.html
@@ -126,11 +126,11 @@ $(document).ready(function () {
 true
 </div>
 
-<table style="width:43%;">
+<table>
 <colgroup>
-<col width="20%"></col>
-<col width="9%"></col>
-<col width="12%"></col>
+<col width="23%"></col>
+<col width="51%"></col>
+<col width="25%"></col>
 </colgroup>
 <thead>
 <tr class="header">
@@ -248,12 +248,37 @@ true
 <tr class="even">
 <td>Q19-Ind-Lit-c2</td>
 <td>Can read and write</td>
-<td></td>
+<td>(age 5 and above)</td>
 </tr>
 <tr class="odd">
 <td>Q20-Ind-EdAtt-c3</td>
 <td>Ever/currently attended school</td>
-<td></td>
+<td>(age 5 and above)</td>
+</tr>
+<tr class="even">
+<td>Q21-Ind-EdHing-c19</td>
+<td>Highest level of education attained</td>
+<td>(age 5 and above) grouping?</td>
+</tr>
+<tr class="odd">
+<td>Q22-Ind-ActStat-c12</td>
+<td>Activity Status</td>
+<td>(age 10 and above)</td>
+</tr>
+<tr class="even">
+<td>Q23-Ind-Occ</td>
+<td>Occupation (ILO)</td>
+<td>age 10 and above AND Q22 == employed or self-employed</td>
+</tr>
+<tr class="odd">
+<td>Q24-Ind-Ind</td>
+<td>Industry (ILO)</td>
+<td>age 10 and above AND Q22 == employed or self-employed</td>
+</tr>
+<tr class="even">
+<td>Q25-Ind-ChildB</td>
+<td>Number of children born alive</td>
+<td>(ever married women over 15)</td>
 </tr>
 </tbody>
 </table>
